Fixed z-index issue

--- a/etc/css/style.css
+++ b/etc/css/style.css
@@ -1075,7 +1075,7 @@ span.content-summary {
   width: 100%;
   height: 30px;
   align-items: center;
-  z-index: 1;
+  z-index: 3;
 }
 
 div.content-detail {
@@ -1173,8 +1173,8 @@ table.query-results-table th {
 table.query-results-table thead.query-results-table-header {
   background-color: var(--panel-bg-secondary);
   position: sticky;
-  top: 0;
-  z-index: 10;
+  top: 0px;
+  z-index: 2;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
 }
 
